--- a/style.css
+++ b/style.css
@@ -29,6 +29,17 @@ a{
     border-bottom: 2px solid #ff0000;
 }
 
+.menu .pg-atual{
+    color: #fff;
+    transition: 0.5s;
+    font-size: 1.3em;
+}
+
+.menu .pg-atual:hover{
+    color: #ff0000;
+    font-size: 1em;
+}
+
 .menu h1{
     font-size: 34px;
     font-weight: bold;
@@ -73,7 +84,7 @@ a{
 
 /* main home */
 
-main {
+main .home {
     background-image: url('./img/fundo.png'), linear-gradient(rgba(0, 0, 0, 0.5), rgba(12, 12, 12, 0.637));
     background-blend-mode: overlay;
 }
@@ -118,18 +129,18 @@ main .btn-contato .btn-home {
     left: 50%;;
     transform: translate(-50%, -50%);
     padding: 10px 10px;
-    margin-top: 20px;
+    margin-top: 30px;
     border-radius: 10px;
     background-color: rgb(255, 0, 0);
     color: #fff;
     text-transform: uppercase;  
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
     border: 2px solid black;
 }
 
 main .btn-contato .btn-home a {
-    color: black;
+    color: white;
 }
 
 main .btn-contato .btn-home:hover, 
@@ -265,14 +276,15 @@ main .btn-contato .btn-home:hover {
 
 .btn-conexoes {
     background-color: red;
-    color: black;
+    color: white;
     margin-top: -7px;
     padding: 10px 10px;
     border-radius: 5px;
     text-transform: uppercase;
     text-align: center;
-    width: 300px;
+    width: 420px;
     margin: 0 auto;
+    font-size: 22px ;
 }
 
 .btn-conexoes:hover {
@@ -290,21 +302,22 @@ main .btn-contato .btn-home:hover {
 
 .btn {
     background-color: red;
-    color: black;
-    margin-top: -7px;
+    color: white;
     padding: 10px 10px;
     border-radius: 5px;
     text-transform: uppercase;
     text-align: center;
-    width: 300px;
+    width: 400px;
     margin: 0 auto;
+    font-size: 22px;
+    margin-top: 22px;
 }
 
 .btn:hover {
     background-color: #ff0000;
     color: #fff;
-    transition: 0.4s;
-    transform: translateY(-3px)
+    transition: 0.5s;
+    transform: translateY(3px)
 }
 
 /* fim do btn */
@@ -317,6 +330,7 @@ main .btn-contato .btn-home:hover {
 }
 /* fim da gambiarra */
 
+/* footer */
 footer {
     display: flex;
     justify-content: space-between;
@@ -326,3 +340,173 @@ footer {
     color: #ff0000;
     border-top: 2px solid #ff0000;
 }
+/* fim do footer */
+
+/* contato */
+
+
+.contato-text {
+    background-color: #333;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    padding-left: 30px;
+}
+
+
+.contato-text:hover {
+    color: #f70707;
+    transition: 0.7s;
+    transform: translateY( 3px)
+}
+
+
+.contato-text h2 {
+    font-size: 45px;
+    text-shadow: 2px 1px 1px #000;
+}
+
+.contato-text p {
+    font-size: 22px;
+    text-shadow: 2px 1px 1px #000;
+}
+
+
+.fundo-contato {
+   background-color: rgba(54, 54, 54, 0.479);
+   background-image: url('./img/contato.jpeg');
+   background-size: cover;
+}
+
+.contato h1 {
+    color: #fff;
+    font-size: 50px;
+    text-align: center;
+    padding-top: 20px;
+    text-shadow: 2px 1px 1px #000;      
+}
+
+.mapa {
+    padding-top: 50px;
+    width: 80%;
+    height: 60vw;
+    display: flex;
+    justify-self: center;
+}   
+
+.contato-form {
+    display: flex;
+    justify-content: center;
+    margin-top: -150px;
+    text-align: left;
+}
+
+.contato-form .contato-input {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+/*lado esquerdo*/
+
+.contato-form .left-side {
+    width: 50%;
+    padding: 30px;
+    background-color: #333333d3;
+    color: white;
+    border-radius: 14px;
+    margin-right: 50px;
+    height: fit-content;
+    font-size: 22px;
+}
+
+.contato-form .left-side a:hover {
+    cursor: pointer;
+    font-size: 23px;
+
+}
+
+.contato-form .left-side b {
+    color: #ff0000;
+    text-transform: uppercase;
+}
+
+.contato-form .left-side div {
+    display: flex;
+    justify-content: start  ;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.contato-form .left-side form {
+    margin: 10px 0;
+    text-align: left;
+    font-size: 22px;
+    color: white;
+}
+
+/* lado direito */
+
+.contato-form .right-side {
+    width: 50%;
+}
+
+.contato-form .right-side input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    transition: 0.3s;
+    border: 1px solid rgba(0, 0, 0, 0.075);
+    color: #000000;
+    font-weight: 300;
+}
+
+
+.contato-form .right-side input:focus,
+.contato-form .right-side textarea:focus {
+    border-color: red;
+    transform: 2s;
+}
+
+.contato-form .right-side input,
+.contato-form .right-side textarea {
+    border: 1px solid #ccc; 
+    padding: 10px;
+
+}
+
+
+.contato-form .right-side textarea {
+    border: 1px solid #f1f1f1;
+    color: #212121;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 15px;
+    width: 100%;
+    height: fit-content;
+    transition: 3s;
+    font-weight: 300;
+    resize: none;
+}
+
+.contato-form .right-side button {
+    border: none;
+    background-color: red;
+    padding: 15px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 18px;
+    height: 5%;
+    color: white;
+}
+
+/* fim do contato */
